# YukiShadow

./: .env.example  .gitignore  cli_chat.py  docker-compose.yml  main.py  mosquitto.conf  pyproject.toml
core/: base_skill.py  config.py  llm_client.py  message_bus.py
docs/: architecture.md  claude_desktop_mcp.json
integrations/discord/: bot.py
integrations/mqtt/: client.py
jetson/: mqtt_client.py
mcp_server/: server.py
orchestrator/: agent_runner.py  app.py  skill_registry.py
scheduler/: service.py
skills/chat_agent/: SKILL.md  skill.py
skills/discord/: SKILL.md  discord_service.py  skill.py
skills/discord_notify/: SKILL.md  skill.py
skills/file_manager/: SKILL.md  skill.py
skills/reminder/: SKILL.md  skill.py
skills/ui_control/: SKILL.md  skill.py
storage/: database.py  vector_store.py
